# CompactReasoningModels

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pixi.toml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: n5_mlp_r.yaml  n5_mlp_s.yaml  train_n15_snn.yaml  train_n15_tfm.yaml  train_n5_1_sample.yaml  train_n5_1_sample_transformer.yaml  train_n5_snn.yaml  train_n5s_snn.yaml
configs/criterion/: bce.yaml  nonogram.yaml
configs/data/: nng10x10_overfit.yaml  nng15x15.yaml  nng15x15_overfit.yaml  nng5x5.yaml  nng5x5_overfit.yaml  nonogram_15x15.yaml  nonogram_5x5.yaml  nonogram_5x5_reward.yaml  nonogram_5x5_reward_1_sample.yaml  nonogram_5x5_small.yaml
configs/dataloader/: 1_sample.yaml  default.yaml
configs/logger/: null_logger.yaml  wandb.yaml
configs/model/: mlp.yaml  simple_nn.yaml  simple_transformer.yaml  tfm.yaml
configs/optimizer/: adam.yaml
configs/paths/: default.yaml
configs/scheduler/: cosine_annealing.yaml
configs/split/: random_split.yaml
configs/trainer/: default.yaml  reward.yaml  supervised.yaml
data/: data_info.md
data/processed/: .gitignore  target_small.npz.dvc  train_small.npz.dvc
data/raw/: .gitignore  target_combined.npz.dvc  train_combined.npz.dvc  train_combined.zip.dvc
docs/: TODO.md
notebooks/: loss_inspection.ipynb  reward_trainer copy.ipynb  reward_trainer_single_sample.ipynb  run_model.ipynb  test_nonogram_loss.py
scripts/: train.py
src/data/: base.py  nonogram_dataset.py  puzzle_dataset.py  reduce_npz.py
src/models/: base.py  cnn.py  mlp.py  tfm.py  (+4 more)
wandb/: latest-run
(+36 files in other folders)
